--- a/src/screens/Containers/containers.module.scss
+++ b/src/screens/Containers/containers.module.scss
@@ -17,7 +17,7 @@ $primary-text-color: #3e423f;
   .containers {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;;
 
     .containerCard {
       
