--- a/src/screens/Home/home.module.scss
+++ b/src/screens/Home/home.module.scss
@@ -11,7 +11,7 @@ $primary-text-color: #3e423f;
   }
 
   .containerStats {
-    padding: 2rem 2rem;
+    padding: 0rem 2rem;
 
     .lineStats {
       
